# CfgManager

./: .gitignore  BuildFile.xml  CMakeLists.txt  Makefile  setup.py
interface/: CfgManager.h  CfgManagerT.h  LinkDef.h
src/: CfgManager.cc  classes.h  classes_def.xml  python_bindings.cc
src/cfgmanager/: __init__.py
src/cfgmanager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.cfg  test.py
